--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@kobalte/core": "^0.13.7",
+    "@mui/icons-material": "^6.2.1",
+    "aws-sdk": "^2.1692.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "groq-sdk": "^0.9.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.0",
+    "openai": "^4.77.0",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
